.xmonad/xmonad.errors

xmonad.hs:60:39: error:
    • Variable not in scope: xK_Space :: KeySym
    • Perhaps you meant ‘xK_space’ (imported from XMonad)
   |
60 |     ((m .|. shiftMask               , xK_Space      ), withFocused (windows . sink)),
   |                                       ^^^^^^^^
